--- a/templates/addpost.html
+++ b/templates/addpost.html
@@ -12,7 +12,7 @@
     <form action='/add' method='POST' enctype="multipart/form-data">
         <div class="col-md">
             <div class="card bg-light mb-3" style="max-width: 18rem;" >
-                <h5 class="card-title"> Upload Images:<input type="file" id="file" name="file" accept="image/*">
+                <h5 class="card-title"> Upload Image:<input type="file" id="file" name="file" accept="image/*">
         <div class="card-body" style = "background-color:#caa8ac;">
         Content: <input type='text' name='content' id='content', required>
 
@@ -41,7 +41,7 @@
     </form>
 </div>
 </div>
-    <a href="/adminDashboard">Return to Dashboard</a>
+    <a href="/listposts">Return to Posts</a>
 <hr>
     <p>{{message}}</p>
 {% endblock %}
