--- a/templates/listPosts.html
+++ b/templates/listPosts.html
@@ -12,35 +12,17 @@
 
 {% block body %}
 
-<div class="container" style ="background-color:#f3dcdc;">
+<div class="container" style ="background-color:#c8dfe9;">
     <div class = "row">
-{% for listing in listings %}
+{% for post in posts %}
     <form action = '/listPosts' method="POST">  
         <div class="col-sm">
             <div class="card bg-light mb-3" style="max-width: 18rem;">
-                <input type="hidden" name="listing_id" value="{{listing.listing_id}}"/>
-                <img src = "{{listing.image_url}}" class="card-img-top" name = "image_url" alt = " Listing Image" width="250px" height="250px">
-                <div class="card-body" style = "background-color:#caa8ac;">
-                    Content:<h5 class="card-title">{{ listing.address }}</h5>
-                    <input type="hidden" name="content" value="{{listing.address}}"/>
+                <input type="hidden" name="post_id" value="{{post.post_id}}"/>
+                <img src = "{{post.image}}" class="card-img-middle" name = "image_url" alt = " Post Image" width="100%" height="100%" object-fit="contain">
+                <div class="card-body" style = "background-color:#95b5c3;">
+                    Content:<h5 class="card-title">{{ post.content }}</h5>
                     <br>
-                    <!-- Suburb:<p class="card-text">{{listing.suburb}} 
-                      <input type="hidden" name="suburb" value="{{listing.suburb}}"/>  
-                  <br>
-                      Zipcode: <br> {{listing.zipcode}}
-                      <input type="hidden" name="zipcode" value="{{listing.zipcode}}"/> 
-                  <br>
-                      Details: <br> {{listing.details}}
-                      <input type="hidden" name="details" value="{{listing.details}}"/>
-                     <br>
-                      Price: <br>{{listing.price}}
-                      <input type="hidden" name="price" value="{{listing.price}}"/>
-                     <br>
-                      Status: <br>{{listing.status}}
-                      <input type="hidden" name="status" value="{{listing.status}}"/> 
-                     -->
-<!-- 
-                    <input type = 'submit' value="Edit"/> -->
 
 
 
