--- a/templates/listPosts.html
+++ b/templates/listPosts.html
@@ -2,9 +2,11 @@
 
 {% block head %}
 
-<h1><div class="text-center" >All Posts</div></h1>
+<h1><div class="text-center" >Art Toys Collective</div></h1>
+<p><div class="text-center" >Welcome to Art Toys Collective, a space to share your passion 
+    for Art Toys and inspire others with your collection! </div></p>
 <hr>
-<title>Posts</title> 
+<title>All Posts</title> 
 <form action="/add">
     <input type="submit" value="Add Post" />
 </form>
@@ -21,14 +23,10 @@
                 <input type="hidden" name="post_id" value="{{post.post_id}}"/>
                 <img src = "{{post.image}}" class="card-img-middle" name = "image_url" alt = " Post Image" width="100%" height="100%" object-fit="contain">
                 <div class="card-body" style = "background-color:#95b5c3;">
-                    Content:<h5 class="card-title">{{ post.content }}</h5>
+                    Description:<h5 class="card-title">{{ post.content }}</h5>
                     <br>
-
-
-
        </div>
         </div>
-      
     </div>
     </form>
 {%endfor%}
